--- a/frontend-vite-react/package.json
+++ b/frontend-vite-react/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react-dom": "^2.1.2",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/html": "^2.3.2",
     "@material-tailwind/react": "^2.1.10",
+    "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.7",
+    "framer-motion": "^12.0.6",
+    "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0",
